3) Set of corrections in a kernel (netfiler/routing/ipv6)<br>
4) Rewrite logic in init.d for speedup<br>
5) Add simple software conntrack fastpath<br>
6) Cleannat module support for clear conntrack table<br>
7) More connrack helpers and protocol support<br>
8) Kernel backport fixes from stable tree<br>
9) Busybox update to 1.17.x tree<br>
10) Some scrits rewrite for speedup<br>
11) Remove hldc and vj support for pppd<br>
12) ppp connection optimization in kernel<br>
13) DMZ must works<br>
14) Sync from 3.4.0.1 RalinkSDK from trandnet TEW-691GR GPL code<br>
15) libnvram fix crash on reliad settings and some leaks<br>
16) Fix freeze in 802.11n mode change in EthernetConverterMode<br>
17) ppp use metric 10 for dgw replace<br>
18) add more workaround for buggy nas<br>
19) Portforward work now<br>
20) MAC/IP/PORT filterd work now<br>
21) pptp/l2tp now work with new corbina bras<br>
22) Get staticroutes and msstatic routes from dhcp server work now<br>
23) WebUI Add watchdog enable/disable function<br>
24) Fix reboot at apply change in ethernet converter mode<br>
25) Fix lldt control in webui<br>
26) Add interface select for macip filter and port forward in WebUI<br>
27) Add 802.11g/n mixed mode and set default<br>
28) Add samba for smb and wins services<br>
29) portforward and ipport filter scripts now reboot at start<br>
30) Content filters based on webstr now works<br>
31) Use WLAN_MAC_ADDR, WAN_MAC_ADDR, LAN_MAC_ADDR variable in nvram for set macs to interfaces<br>
32) STA profiles now works<br>
<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>
