@@ -8,36 +8,36 @@ body {
 p {
   font-size: 9pt; 
   margin-left: 10px;
-  font-family: Arial, Helvetica, sans-serif; color: #333333
+  font-family: Arial, Helvetica, sans-serif; color: #333333;
 }
 
 h1 {
   font-size: 14pt; font-weight: bold;
   margin-left: 10px;
-  font-family: Arial, Helvetica, sans-serif; color: #0066CC
+  font-family: Arial, Helvetica, sans-serif; color: #0066CC;
 }
 
 h2 {
 	font-size: 12pt; font-weight: bold;
 ; margin-left: 10px
-; font-family: Arial, Helvetica, sans-serif; color: #0066CC
+; font-family: Arial, Helvetica, sans-serif; color: #0066CC;
 }
 
 h3 {
   font-size: 10pt; font-weight: bold;
   margin-left: 10px;
-  font-family: Arial, Helvetica, sans-serif; color: #0066CC
+  font-family: Arial, Helvetica, sans-serif; color: #0066CC;
 }
 
 h4 {
-  font-size: 9pt; font-weight: bold; ; margin-left: 10px ; font-family: Arial, Helvetica, sans-serif; color: #0066CC
+  font-size: 9pt; font-weight: bold; ; margin-left: 10px ; font-family: Arial, Helvetica, sans-serif; color: #0066CC;
 }
 
 pre {
   line-height: normal;
   color: #0A0A8C;
-font-family: "Courier New", Courier, mono; font-size: 9pt; margin-left: 10px; background-color: #EEEEEE; padding-left: 20px
-; padding-top: 5px; padding-bottom: 5px; padding-right: 20px
+font-family: "Courier New", Courier, mono; font-size: 9pt; margin-left: 10px; background-color: #EEEEEE; padding-left: 20px;
+; padding-top: 5px; padding-bottom: 5px; padding-right: 20px;
 }
 
 table {
@@ -54,13 +54,13 @@ td.title {
   background-color: #2C5EA4;
   font-weight: bold;
   white-space: nowrap;
-  color: #FFFFFF
+  color: #FFFFFF;
 }
 
 td.subtitle {
   background-color: #3C6EB4;
   font-style: italic;
-  color: #FFFFFF
+  color: #FFFFFF;
 }
 
 td.head {
@@ -69,7 +69,7 @@ td.head {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #E8F8FF;
   white-space: nowrap;
-  color: #333333
+  color: #333333;
 }
 
 th {
@@ -77,7 +77,7 @@ th {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #E8F8FF;
   white-space: nowrap;
-  color: #333333
+  color: #333333;
 }
 
 td.value {
@@ -90,7 +90,7 @@ td.head1 {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #FFF8E8;
   white-space: nowrap;
-  color: #333333
+  color: #333333;
 }
 
 td.head2 {
@@ -99,7 +99,7 @@ td.head2 {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #E8F8FF;
   white-space: nowrap;
-  color: #333333
+  color: #333333;
 }
 
 td.head_filter {
@@ -107,25 +107,25 @@ td.head_filter {
   font-size: 9pt; 
   font-family: Arial, Helvetica, sans-serif;
   background-color: #E8F8FF;
-  color: #333333
+  color: #333333;
 }
 
 td {
   font-size: 9pt; 
   font-family: Arial, Helvetica, sans-serif;
-  color: #333333
+  color: #333333;
 }
 
 table.small {
   font-size: 10pt;
   font-family: Arial, Helvetica, sans-serif;
-  color: #333333
+  color: #333333;
   text-align: center;
 }
 
 table.small th {
   background-color: #2C5EA4;
-  color: #FFFFFF
+  color: #FFFFFF;
 }
 
 table.small td {
@@ -133,14 +133,14 @@ table.small td {
 }
 
 ol {
-  margin-left: 40px; color: #333333; font-family: Arial, Helvetica, sans-serif; font-size: 9pt
+  margin-left: 40px; color: #333333; font-family: Arial, Helvetica, sans-serif; font-size: 9pt;
 }
 
 ul {
-  font-size: 9pt; ; margin-left: 30px; font-family: Arial, Helvetica, sans-serif; color: #333333
+  font-size: 9pt; ; margin-left: 30px; font-family: Arial, Helvetica, sans-serif; color: #333333;
 }
 
 acronym
 {
-	border-bottom: 0px
+	border-bottom: 0px;
 }
